--- a/src/resources/views/layouts/auth.hbs
+++ b/src/resources/views/layouts/auth.hbs
@@ -38,5 +38,6 @@
     </footer>
     <script src="/assets/js/authActive.js"></script>
     <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/comment.js"></script>
   </body>
 </html>
