--- a/src/resources/views/layouts/admin.hbs
+++ b/src/resources/views/layouts/admin.hbs
@@ -39,5 +39,6 @@
 <!-- Thêm Bootstrap JS (Bootstrap 4 yêu cầu jQuery) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/admin.js"></script>
+        <script src="/assets/js/comment.js"></script>
   </body>
 </html>
