function admin change guest to subscriber when guest request

--- a/src/resources/views/administrator/admin_dashboard.hbs
+++ b/src/resources/views/administrator/admin_dashboard.hbs
@@ -32,10 +32,44 @@
       </div>
       <div class="col-9">
         <h1 class="admin__heading">Dashboard</h1>
-        <div class="charts">
-          <canvas id="trafficChart" class="chart"></canvas>
-          <canvas id="userChart" class="chart"></canvas>
-          <canvas id="popularArticlesChart" class="chart"></canvas>
+        <div class="dashboard-content">
+          <section class="dashboard-functions">
+            <h2>Admin Functions</h2>
+            <ul>
+              <li>
+                <a href="/admin/manage-categories">
+                  <div class="function-icon">&#128195;</div>
+                  <div class="function-name">Manage Categories</div>
+                </a>
+              </li>
+              <li>
+                <a href="/admin/manage-tags">
+                  <div class="function-icon">&#128278;</div>
+                  <div class="function-name">Manage Tags</div>
+                </a>
+              </li>
+              <li>
+                <a href="/admin/manage-articles">
+                  <div class="function-icon">&#128221;</div>
+                  <div class="function-name">Manage Article</div>
+                </a>
+              </li>
+
+              <li>
+                <a href="/admin/manage-users">
+                  <div class="function-icon">&#128100;</div>
+                  <div class="function-name">Manage Users</div>
+                </a>
+              </li>
+              <li>
+                <a href="/admin/extend-subscription">
+                  <div class="function-icon">&#128178;</div>
+                  <div class="function-name">Extend Subscriber Access</div>
+                </a>
+              </li>
+
+            </ul>
+          </section>
         </div>
       </div>
     </div>
