--- a/src/resources/views/guest/article.hbs
+++ b/src/resources/views/guest/article.hbs
@@ -1,8 +1,10 @@
 <div class="container">
   <div class="row">
-
     <div class="col-9">
       <div class="article-container">
+        {{#if (eq article.type "pre")}}
+        <button id="download-btn" class="btn btn-primary mt-3">Download PDF</button>
+        {{/if}}
         <h1 class="article-header">{{article.title}}</h1>
 
         <div class="article-metadata">
@@ -220,3 +222,4 @@
     </div>
   </div>
 </div>
+
